--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.2.6",
+    "cingta-icon": "^1.2.9",
+    "countup.js": "^2.6.0",
     "echarts": "^5.4.2",
+    "echarts-gl": "^2.0.9",
     "element-plus": "^2.2.30",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
